html pages added

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@
 	height: 100px;
  }
 
+/* ______________ Table ______________________  */
+
 /* ______________ Inline_Block ______________________ */
 
 .fs0 {
