--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,7 @@
 
 *, *::before, *::after {
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 
 html, body, div, span, applet, object, iframe,
