--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
 
 /* ______________ MAIN PAGE______________________ */
 .main_body {
-  background: linear-gradient(180deg, #373e98 31%, #00d4ff 100%);
+  background: linear-gradient(180deg, #373e98 31%, #00d4ff);
   width: 100vw;
   height: 100vh;
 }
@@ -50,6 +50,7 @@
   font-style: normal;
   font-size: 20px;
   text-transform: uppercase;
+  padding: 30px 15px;
 }
 
 header::after {
@@ -75,18 +76,24 @@ header::after {
 .mp_nav_list,
 .my_social_list {
   display: flex;
-  gap: 15px;
   justify-content: center;
+  gap: 15px;
   align-items: center;
   color: white;
+}
+
+.my_social_list {
+  gap: 0;
 }
 
 .nav_item,
 .mp_nav_list_2,
 .mp_nav_list_3 {
+  width: 100%;
   outline: 1px solid white;
   border-radius: 6px;
   background: #373e98;
+  text-wrap: nowrap;
 }
 .nav_item a,
 .my_social_item a {
@@ -96,9 +103,37 @@ header::after {
   padding: 15px 10px;
 }
 
+
+.my_social_item {
+  width: 40px;
+  height: 40px;
+}
+
 .my_social_item a {
   padding: 0;
-  line-height: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.fcb {
+  background: url(../img/social/my_page/facebook-176-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: 24px;
+  background-position: 50%;
+}
+
+.insta {
+  background: url(../img/social/my_page/instagram-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: 35px;
+  background-position: 50%;
+}
+
+.gith {
+  background: url(../img/social/my_page/git-repository-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 50%;
 }
 
 .home_work,
@@ -106,26 +141,56 @@ header::after {
   position: relative;
 }
 
-.home_work ul,
-.layouts ul {
+.home_work > ul,
+.layouts > ul {
   position: absolute;
   text-wrap: nowrap;
   line-height: 10px;
 }
-.home_work ul {
+.home_work > ul {
   top: 100%;
   left: 0;
 }
 
-.layouts ul {
+.layouts > ul {
   top: 0;
-  left: 0;
+  right: 100%;
+  text-align: center;
+}
+li .home_btn {
+	padding-left: 40px;
+	background: url(../img/nav/house-floor-svgrepo-com.svg);
+	background-repeat: no-repeat;
+	background-size: 30px;
+	background-position: 5% 50%;
+ }
+ li .gallery_btn {
+	padding-left: 40px;
+	background: url(../img/nav/gallery-svgrepo-com.svg);
+	background-repeat: no-repeat;
+	background-size: 30px;
+	background-position: 5% 50%;
+ }
+ 
+ li .hw_btn {
+	padding-right: 40px;
+	background: url(../img/nav/arrow-down-svgrepo-com.svg);
+	background-repeat: no-repeat;
+	background-size: 30px;
+	background-position: 95% 50%;
+ }
+
+li .ly_btn {
+  padding-left: 40px;
+  background: url(../img/nav/chevron-left-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 5% 50%;
 }
 
-.mp_nav_list_3 {
-  margin-left: -61px;
+.mp_nav_list_2 > li:not(:last-child) {
+  padding-left: 30px;
 }
-
 .mp_nav_list_2,
 .mp_nav_list_3 {
   display: none;
@@ -164,6 +229,7 @@ header::after {
 
 .text_center {
   text-align: center;
+  vertical-align: middle;
 }
 
 .text_bold {
@@ -522,10 +588,38 @@ header p a {
 }
 
 .item {
-  display: inline-block;
-  line-height: 10px;
-  width: 49px;
-  height: 48px;
+	display: inline-block;
+	/* width: 49px;
+	height: 48px; */
+	padding: 25px;
+	
+ }
+
+.fcbk{
+	background: url(../img/social/facebook.svg);
+	background-size: 70px;
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+.inst{
+	background: url(../img/social/instagram.svg);
+	background-size: 70px;
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+.twit{
+	background: url(../img/social/twitter.svg);
+	background-size: 70px;
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+.yout{
+	background: url(../img/social/youtube-a3728986e4b2.svg);
+	background-size: 70px;
+	background-repeat: no-repeat;
+	background-position: 50%;
 }
 
 .item:active {
