--- a/css/style.css
+++ b/css/style.css
@@ -103,36 +103,36 @@ header::after {
   padding: 15px 10px;
 }
 
-
 .my_social_item {
-  width: 40px;
-  height: 40px;
+	margin-right: 10px;
+}
+
+.my_social_item:last-child{
+	margin-right: 0;
 }
 
 .my_social_item a {
-  padding: 0;
-  width: 100%;
-  height: 100%;
+  padding: 20px;
 }
 
 .fcb {
-  background: url(../img/social/my_page/facebook-176-svgrepo-com.svg);
+  background: url(../img/social/facebook.svg);
+  background-size: 70px;
   background-repeat: no-repeat;
-  background-size: 24px;
   background-position: 50%;
 }
 
 .insta {
-  background: url(../img/social/my_page/instagram-svgrepo-com.svg);
+  background: url(../img/social/instagram.svg);
+  background-size: 70px;
   background-repeat: no-repeat;
-  background-size: 35px;
   background-position: 50%;
 }
 
 .gith {
   background: url(../img/social/my_page/git-repository-svgrepo-com.svg);
   background-repeat: no-repeat;
-  background-size: 30px;
+  background-size: 70px;
   background-position: 50%;
 }
 
@@ -158,27 +158,27 @@ header::after {
   text-align: center;
 }
 li .home_btn {
-	padding-left: 40px;
-	background: url(../img/nav/house-floor-svgrepo-com.svg);
-	background-repeat: no-repeat;
-	background-size: 30px;
-	background-position: 5% 50%;
- }
- li .gallery_btn {
-	padding-left: 40px;
-	background: url(../img/nav/gallery-svgrepo-com.svg);
-	background-repeat: no-repeat;
-	background-size: 30px;
-	background-position: 5% 50%;
- }
- 
- li .hw_btn {
-	padding-right: 40px;
-	background: url(../img/nav/arrow-down-svgrepo-com.svg);
-	background-repeat: no-repeat;
-	background-size: 30px;
-	background-position: 95% 50%;
- }
+  padding-left: 40px;
+  background: url(../img/nav/house-floor-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 5% 50%;
+}
+li .gallery_btn {
+  padding-left: 40px;
+  background: url(../img/nav/gallery-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 5% 50%;
+}
+
+li .hw_btn {
+  padding-right: 40px;
+  background: url(../img/nav/arrow-down-svgrepo-com.svg);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: 95% 50%;
+}
 
 li .ly_btn {
   padding-left: 40px;
@@ -196,6 +196,9 @@ li .ly_btn {
   display: none;
 }
 
+/* .nav_item:hover{
+	background-color: #fee36e;
+} */
 .home_work:hover .mp_nav_list_2 {
   display: block;
 }
@@ -588,38 +591,37 @@ header p a {
 }
 
 .item {
-	display: inline-block;
-	/* width: 49px;
+  display: inline-block;
+  /* width: 49px;
 	height: 48px; */
-	padding: 25px;
-	
- }
-
-.fcbk{
-	background: url(../img/social/facebook.svg);
-	background-size: 70px;
-	background-repeat: no-repeat;
-	background-position: 50%;
+  padding: 25px;
 }
 
-.inst{
-	background: url(../img/social/instagram.svg);
-	background-size: 70px;
-	background-repeat: no-repeat;
-	background-position: 50%;
-}
-.twit{
-	background: url(../img/social/twitter.svg);
-	background-size: 70px;
-	background-repeat: no-repeat;
-	background-position: 50%;
+.fcbk {
+  background: url(../img/social/facebook.svg);
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 50%;
 }
 
-.yout{
-	background: url(../img/social/youtube-a3728986e4b2.svg);
-	background-size: 70px;
-	background-repeat: no-repeat;
-	background-position: 50%;
+.inst {
+  background: url(../img/social/instagram.svg);
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 50%;
+}
+.twit {
+  background: url(../img/social/twitter.svg);
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 50%;
+}
+
+.yout {
+  background: url(../img/social/youtube-a3728986e4b2.svg);
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 50%;
 }
 
 .item:active {
