--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,10 @@ header::after {
 }
 
 .logo {
-  background: white;
+  background-image: linear-gradient(to right top, blue, yellow);
   border-radius: 10px 10px 10px 0px;
-  color: #373e98;
+  color: white;
+  outline: 5px solid #373e98;
   text-decoration: none;
   font-size: 35px;
   padding: 10px;
@@ -75,6 +76,7 @@ header::after {
   gap: 15px;
   align-items: center;
   color: white;
+  z-index: 100;
 }
 
 .my_social_list {
@@ -104,24 +106,16 @@ header::after {
 
 .fcb {
   background: url(../img/social/facebook.svg) no-repeat 50% / 70px;
-  /* background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 50%; */
 }
 
 .insta {
   background: url(../img/social/instagram.svg) no-repeat 50% / 70px;
-  /* background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 50%; */
-}
+ }
 
 .gith {
-  background: url(../img/social/my_page/git-repository-svgrepo-com.svg) no-repeat 50% / 70px;
-  /* background-repeat: no-repeat;
-  background-size: 70px;
-  background-position: 50%; */
-}
+  background: url(../img/social/my_page/git-repository-svgrepo-com.svg)
+    no-repeat 50% / 70px;
+  }
 
 .home_work,
 .layouts {
@@ -146,34 +140,25 @@ header::after {
 }
 li .home_btn {
   padding-left: 40px;
-  background: url(../img/nav/house-floor-svgrepo-com.svg) no-repeat 5% 50% / 30px;
-  /* background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: 5% 50%; */
-}
+  background: url(../img/nav/house-floor-svgrepo-com.svg) no-repeat 5% 50% /
+    30px;
+ }
 li .gallery_btn {
   padding-left: 40px;
   background: url(../img/nav/gallery-svgrepo-com.svg) no-repeat 5% 50% / 30px;
-  /* background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: 5% 50%; */
-}
+ }
 
 li .hw_btn {
   padding-right: 40px;
-  background: url(../img/nav/arrow-down-svgrepo-com.svg) no-repeat 95% 50% / 30px;
-  /* background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: 95% 50%; */
+  background: url(../img/nav/arrow-down-svgrepo-com.svg) no-repeat 95% 50% /
+    30px;
 }
 
 li .ly_btn {
   padding-left: 40px;
-  background: url(../img/nav/chevron-left-svgrepo-com.svg) no-repeat 5% 50% / 30px;
-  /* background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: 5% 50%; */
-}
+  background: url(../img/nav/chevron-left-svgrepo-com.svg) no-repeat 5% 50% /
+    30px;
+ }
 
 .mp_nav_list_2 > li:not(:last-child) {
   padding-left: 30px;
@@ -183,9 +168,6 @@ li .ly_btn {
   display: none;
 }
 
-/* .nav_item:hover{
-	background-color: #fee36e;
-} */
 .home_work:hover .mp_nav_list_2 {
   display: block;
 }
@@ -405,14 +387,16 @@ li .ly_btn {
 /* ______________ Gallery Side ______________________ */
 
 .light_side {
-  background: url(../img/Backgrouds/background_2.webp) no-repeat 50% / cover fixed;
+  background: url(../img/Backgrouds/background_2.webp) no-repeat 50% / cover
+    fixed;
   position: relative;
   /* background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed; */
 }
 .dark_side {
-  background: url(../img/Backgrouds/background_3.webp) no-repeat 50% / cover fixed;
+  background: url(../img/Backgrouds/background_3.webp) no-repeat 50% / cover
+    fixed;
   position: relative;
   /* background-size: cover;
   background-repeat: no-repeat;
@@ -476,10 +460,17 @@ header p a {
   align-items: center;
   margin-bottom: 80px;
 }
-.card > img {
+/* .card > img {
   object-fit: cover;
   flex: 0 0 297px;
+} */
+.card picture {
+  flex: 0 0 310px;
 }
+.card img {
+  object-fit: cover;
+}
+
 .card_content {
   flex-grow: 1;
 }
@@ -605,13 +596,56 @@ header p a {
 }
 
 .yout {
-  background: url(../img/social/youtube-a3728986e4b2.svg);
-  background-size: 70px;
+  background: url(../img/social/youtube-a3728986e4b2.svg) no-repeat 50% / 70px;
+  /* background-size: 70px;
   background-repeat: no-repeat;
-  background-position: 50%;
+  background-position: 50%; */
 }
 
 .item:active {
   outline: 1px solid white;
-  border-radius: 50px;
+  border-radius: 100px;
+}
+
+.gradient_content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.gradient_content {
+  padding-bottom: 50px;
+}
+.gradient_box {
+  flex: 0 0 300px;
+  height: 500px;
+  outline: 5px solid black;
+}
+.linear {
+  background-image: repeating-linear-gradient(45deg, blue 5%, yellow 7%);
+}
+
+.overlay {
+  position: relative;
+  overflow: hidden;
+  z-index: 10;
+  font-size: 28px;
+}
+.overlay::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 47%;
+  left: 41%;
+  z-index: 20;
+  background-image: linear-gradient(45deg, blue, yellow);
+  transform: rotate(0.65turn);
+}
+
+.radial {
+  background-image: repeating-radial-gradient(
+    closest-side circle at 150px 50px,
+    transparent 10%,
+    yellow 20%
+  );
 }
