--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,11 @@
   top: 0;
   left: 0;
   bottom: 0;
-  width: 65px;
+  width: 80px;
   background: #bdbdbd;
   overflow: hidden;
-  transition: width 0.5s linear;
+  transition: width 0.5s ease;
+  z-index: 100;
 }
 
 .sidebar:hover {
@@ -56,42 +57,35 @@
 
 .sidebar:hover + .wrapper {
   padding-left: 200px;
-  transition: padding-left 0.5s linear;
+  transition: padding 0.5s linear;
 }
 
 .sidebar_menu {
   padding-top: 150px;
 }
 
-.sidebar_menu li {
-  padding: 0px 0px 20px 10px;
-}
-
 .sidebar_menu_item a {
+  padding: 0px 0px 20px 20px;
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
 .item_box {
-  flex: 0 0 45px;
-}
-
-.item_box {
-  width: 45px;
-  height: 45px;
+  flex: 0 0 auto;
   overflow: hidden;
   border: 2px solid #464455;
   transition: transform 0.2s linear;
+ 
 }
 
 .sidebar_menu_item svg {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   transition: transform 0.2s linear;
   margin: 4px;
   stroke: #464455;
-}
+  }
 
 .sidebar_menu li a {
   text-decoration: none;
@@ -100,7 +94,7 @@
 .sidebar_menu li a p {
   text-decoration: none;
   color: #464455;
-  font-size: 20px;
+  font-size: 18px;
   font-family: "Roboto Condensed";
   font-weight: 400;
   font-style: normal;
@@ -113,12 +107,12 @@
 }
 
 .sidebar:hover .item_box svg {
+  /* transition: transform 0.2s linear; */
   transform: rotate(-45deg);
-  transition: transform 0.2s linear;
 }
 
 .sidebar_menu_item a:hover .item_box svg {
-  transform: scale(1.2) rotate(-45deg);
+  transform: scale(1.1) rotate(-45deg);
   stroke-width: 2;
   stroke: #ffff00;
 }
@@ -131,7 +125,7 @@
   position: fixed;
   top: 50%;
   right: 0;
-  transform: translateY(-50%) translateX(100%);
+  transform: translate(100%, -50%);
   transition: transform 0.5s linear;
   z-index: 100;
 }
@@ -153,13 +147,10 @@
 .gear {
   position: absolute;
   top: 50%;
-  left: -35px;
-  margin-top: -17px;
-  display: inline-block;
-  text-align: center;
-  width: 35px;
-  height: 35px;
+  right: 100%;
+  transform: translateY(-50%);
   background: #8ee41e;
+  line-height: 10px;
 }
 
 .gear svg {
@@ -193,10 +184,14 @@
 }
 
 /* ______________ MAIN PAGE______________________ */
+html,
+body {
+  height: 100%;
+}
+
 .main_body {
   background: linear-gradient(180deg, #373e98 31%, #00d4ff);
-  width: 100vw;
-  height: 100vh;
+  background-attachment: fixed;
 }
 
 .mp_header {
